--- a/Module_1_Introduction_to_Python_Programming_(Beginner).ipynb
+++ b/Module_1_Introduction_to_Python_Programming_(Beginner).ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "WrOowJKW1iyM"
       ],
-      "authorship_tag": "ABX9TyM44vU/Sd88WRVAZG2CQuEj",
+      "authorship_tag": "ABX9TyMhip0Y61PrQHgC1GpEKfA0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,15 +40,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IupAsXcJ0voe",
-        "outputId": "b08d8d09-dda7-4686-a7b0-e6a7386368c3"
+        "outputId": "61b5d3b6-519f-4dbe-8370-dfbf6fc45e22"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ]
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "4Eq8RRwU1MqE"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "o2SR7V2N6loV"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -189,16 +189,16 @@
         },
         "collapsed": true,
         "id": "Zdidd9-r6-hz",
-        "outputId": "6757dd2f-ad73-4810-f90d-73bccca01af2"
+        "outputId": "89f8cfc2-6fba-4f1b-de00-d50e812eb238"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid decimal literal (<ipython-input-26-1b94e9936db4>, line 1)",
+          "evalue": "invalid decimal literal (<ipython-input-4-1b94e9936db4>, line 1)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-1b94e9936db4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    1age = 30           # Invalid: starts with a digit\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-1b94e9936db4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    1age = 30           # Invalid: starts with a digit\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
           ]
         }
       ]
@@ -358,7 +358,7 @@
         "prod_result = a * b  # Multiplication\n",
         "quot_result = a / b  # Division (returns float)\n",
         "int_quot_result = a // b  # Floor division (returns integer)\n",
-        "mod_result = a % b  # Modulo (remainder)\n",
+        "mod_result = a % b  # Modulus (remainder)\n",
         "pow_result = a ** b  # Exponentiation\n",
         "\n",
         "print(sum_result, diff_result, prod_result, quot_result, int_quot_result, mod_result, pow_result)\n"
@@ -872,38 +872,10 @@
         "\n"
       ],
       "metadata": {
-        "id": "o8plI5cPZmk-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2864e12a-ece2-4d1d-f4fd-6a662bd191d3"
+        "id": "o8plI5cPZmk-"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "('apple', 'banana', 'cherry', 'orange', 'mango', 'orange')\n",
-            "mango\n",
-            "apple\n",
-            "banana\n",
-            "cherry\n",
-            "orange\n",
-            "mango\n",
-            "apple\n",
-            "banana\n",
-            "cherry\n",
-            "orange\n",
-            "mango\n",
-            "apple\n",
-            "banana\n",
-            "cherry\n",
-            "orange\n",
-            "mango\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -923,36 +895,10 @@
         "  print(i)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sr_MA1YKlb5B",
-        "outputId": "d279044d-eac3-4448-9aa6-3f13680f913b"
+        "id": "sr_MA1YKlb5B"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "apple\n",
-            "banana\n",
-            "cherry\n",
-            "orange\n",
-            "mango\n",
-            "apple\n",
-            "banana\n",
-            "cherry\n",
-            "orange\n",
-            "mango\n",
-            "apple1\n",
-            "banana2\n",
-            "cherry\n",
-            "orange\n",
-            "mango\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -982,23 +928,10 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eht2RZejmNUo",
-        "outputId": "efb2b22f-d155-4a6f-fc6c-b6f76a6f64a6"
+        "id": "eht2RZejmNUo"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{1, 2, 3, 4}\n",
-            "{1, 2, 3, 4}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1016,24 +949,10 @@
         "print(set1 - set2)  # Output: {1, 2}\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_kf0XgQyma1_",
-        "outputId": "7caf9db1-adfa-431e-9ab9-60aa5ff2fbc6"
+        "id": "_kf0XgQyma1_"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{1, 2, 3, 4, 5, 6}\n",
-            "{3, 4}\n",
-            "{1, 2}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1064,25 +983,10 @@
         "print(\"Symmetric Difference:\", symmetric_difference_result)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "N7tWKbhmmiAF",
-        "outputId": "6469510c-2de1-443f-add3-4218b578c90d"
+        "id": "N7tWKbhmmiAF"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Union: {1, 2, 3, 4, 5, 6, 7, 8}\n",
-            "Intersection: {4, 5}\n",
-            "Difference (set1 - set2): {1, 2, 3}\n",
-            "Symmetric Difference: {1, 2, 3, 6, 7, 8}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
