--- a/Module_1_Introduction_to_Python_Programming_(Beginner).ipynb
+++ b/Module_1_Introduction_to_Python_Programming_(Beginner).ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "WrOowJKW1iyM"
       ],
-      "authorship_tag": "ABX9TyMhip0Y61PrQHgC1GpEKfA0",
+      "authorship_tag": "ABX9TyORPZqVVLjiiNseWQsq8l7C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Emile-Forbes/Python_Lessons/blob/main/Module_1_Introduction_to_Python_Programming_(Beginner).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Emile-Forbes/Python_Lessons/blob/Dev/Module_1_Introduction_to_Python_Programming_(Beginner).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -263,7 +263,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##1.3 Data Types in python"
+        "##1.3 Data Types in python\n",
+        "Learn about the primitive data types in Python.\n",
+        "\n",
+        "Strings\n",
+        "Integers\n",
+        "Floats\n",
+        "Booleans"
       ],
       "metadata": {
         "id": "4Z_WDsDy9N0H"
@@ -306,6 +312,68 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Type error, checking and conversion\n",
+        "\n",
+        "\"\"\" len(12345) gives an error because you can only give len function string\n",
+        "This gives you a type error\"\"\"\n",
+        "len(\"12345\")\n",
+        "\n",
+        "#Type conversion\n",
+        "\"\"\"You can convert data into different data types using special functions. e.g.\n",
+        "float(), int(),str()\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m5Z31e5fnBPN",
+        "outputId": "1a9cc021-f91e-461c-8714-1f079da3c771"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use Case\n",
+        "name = input(\"Enter your name: \")\n",
+        "age = int(input(\"Enter your age: \"))    # convert from string to int\n",
+        "print(\"In 5 years, \" + name + \" will be \" + str(age + 5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i6uvKz1QoNbU",
+        "outputId": "dbcc097d-398b-47be-eea0-411b3b2226f5"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your name: Emile\n",
+            "Enter your age: 40\n",
+            "In 5 years, Emile will be 45\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -837,7 +905,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\" Tuples are unchangeable, meanign that you cannot change, add, or remove items once the tuple is created.\n",
+        "\"\"\" Tuples are unchangeable, meaning that you cannot change, add, or remove items once the tuple is created.\n",
         "But there are some workarounds. You can convert the tuple into a list, change the list, and convert the list back into a tuple.\n",
         "\"\"\"\n",
         "\n",
@@ -994,6 +1062,154 @@
       "metadata": {
         "id": "IGD5be4ZmwbR"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##2.7 Python Dictionaries\n",
+        "Dictionaries are used to store data values in key:value pairs.\n",
+        "A dictionary is a collection which is ordered*, changeable and do not allow duplicates."
+      ],
+      "metadata": {
+        "id": "ELfStitSjMWc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1 Creating a dictionary\n",
+        "my_dict = {\n",
+        "    \"name\": \"John\",\n",
+        "    \"age\": 30,\n",
+        "    \"city\": \"New York\"\n",
+        "}\n",
+        "print(my_dict)\n",
+        "\n",
+        "\"\"\"Dictionaries are ordered, meaning that the items have a defined order, and that order will not change.\n",
+        "Unordered means that the items does not have a defined order, you cannot refer to an item by using an index.\n",
+        "These values can be of any data type: string, int, boolean, and list data types.\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gMw3Dq_8jepY",
+        "outputId": "74a71063-3b1c-474f-e368-345b58de7b15"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'John', 'age': 30, 'city': 'New York'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2 Dictionary does not allow duplicates\n",
+        "\n",
+        "my_dict = {\n",
+        "    \"name\": \"John\",\n",
+        "    \"age\": 30,\n",
+        "    \"city\": \"New York\",\n",
+        "    \"name\": \"Jane\"  # Duplicate key, will be overwritten\n",
+        "}\n",
+        "print(my_dict)\n",
+        "\n",
+        "\"\"\"Dictionaries are changeable, meaning that we can change, add or remove items after the dictionary has been created.\n",
+        "   the values will only take the last value\n",
+        "\"\"\"\n",
+        "# test cases\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r5gXU9mbjoF1",
+        "outputId": "af9a4ab9-a3cd-4347-fd16-50c6b9c6bcf2"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'Jane', 'age': 30, 'city': 'New York'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3 access dictionary\n",
+        "my_dict = {\n",
+        "    \"name\": \"John\",\n",
+        "    \"age\": 30,\n",
+        "    \"city\": \"New York\"\n",
+        "}\n",
+        "print(my_dict[\"name\"])  # Output: John\n",
+        "\n",
+        "#using get()\n",
+        "x = my_dict.get(\"name\")\n",
+        "print(x)\n",
+        "\n",
+        "#4 change value\n",
+        "my_dict = {\n",
+        "    \"name\": \"John\",\n",
+        "    \"age\": 30,\n",
+        "    \"city\": \"New York\"\n",
+        "}\n",
+        "my_dict[\"age\"] = 35\n",
+        "print(my_dict)\n",
+        "\n",
+        "\n",
+        "\"\"\"The keys() method will return a list of all the keys in the dictionary.\n",
+        "The values() method will return a list of all the values in the dictionary.\n",
+        "The items() method will return each item in a dictionary, as tuples in a list.\n",
+        "\"\"\"\n",
+        "#keys: will retrn a lost of all the keys in the dictionary\n",
+        "my_dict = {\n",
+        "    \"name\": \"John\",\n",
+        "    \"age\": 30,\n",
+        "    \"city\": \"New York\"\n",
+        "}\n",
+        "print(my_dict.keys())\n",
+        "\n",
+        "#values\n",
+        "print(my_dict.values())\n",
+        "\n",
+        "#items\n",
+        "print(my_dict.items())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2LJiWU31kn9c",
+        "outputId": "9fde8ab9-f31f-4bd1-a8f4-25f204d68b68"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John\n",
+            "John\n",
+            "{'name': 'John', 'age': 35, 'city': 'New York'}\n",
+            "dict_keys(['name', 'age', 'city'])\n",
+            "dict_values(['John', 30, 'New York'])\n",
+            "dict_items([('name', 'John'), ('age', 30), ('city', 'New York')])\n"
+          ]
+        }
+      ]
     }
   ]
 }
